--- a/README
+++ b/README
@@ -1,4 +1,7 @@
 Welcome to soCode, the social coding experiment.
+
+Four steps, fork -> edit -> open a pull -> merge
+
 Here are the rules! 
       - Add a funtion with your github name as its name.
       - Your function can do anything and everything, as long as it
