--- a/README
+++ b/README
@@ -2,13 +2,13 @@ Welcome to soCode, the social coding experiment.
 
 Four steps, fork -> edit -> open a pull -> merge
 
-Here are the rules! 
-      - Add a funtion with your github name as its name.
+Here are the rules!
+      - Add a function with your github name as its name.
       - Your function can do anything and everything, as long as it
-        finishes in a reasonable amount of time (no infinite loops please)
+        finishes in a reasonable amount of time. No infinite loops, please.
       - Once your function is written, you can call it from anywhere else in the 
-        already existing exectution chain.
-      - Never entirely delete anyone else's function, edit it if needed.
+        already existing execution chain.
+      - Never entirely delete anyone else's function. Edit it if needed.
       - lefin() should be the last executing function, always
 
-Lets see if we can make something meaningful out of this.
+Let's see if we can make something meaningful out of this.
