--- a/README
+++ b/README
@@ -9,6 +9,6 @@ Here are the rules!
       - Once your function is written, you can call it from anywhere else in the 
         already existing execution chain.
       - Never entirely delete anyone else's function. Edit it if needed.
-      - lefin() should be the last executing function, always
+      - lafin() should be the last executing function, always
 
 Let's see if we can make something meaningful out of this.
