--- a/README
+++ b/README
@@ -13,3 +13,5 @@ Here are the rules!
       - a call to lafin() must remain in __main__().
 
 Let's see if we can make something meaningful out of this.
+
+PS: I am looking for people to help with merges, email - sri [dot] umd [at] gmail
