--- a/README
+++ b/README
@@ -14,4 +14,9 @@ Here are the rules!
 
 Let's see if we can make something meaningful out of this.
 
+Tip: Add a call to your function at the bottom of someone else's function.
+This reduces the chances of a merge conflicts as things appraoch light speed.
+If you do not move fast enough and the automerge fails there is a good chance
+your commit will never get merged.
+
 PS: I am looking for people to help with merges, email - sri [dot] umd [at] gmail
